# stdlib-jpeg

./: CMakeLists.txt  JPEG.sac  README.md
cmake/: check-jpeg.cmake  check-sac2c.cmake  resolve-sac2c-dependencies.cmake  sac2c-variables.cmake
src/: CMakeLists.txt  JPEG.sac
src/JPEG/: jpeg.c
src/c-deps/: jpeg.c
